modules/topics-ui/browser/less/index.less
@import "~normalize.css";
@import "../../../../public/less/highlight.less";
@import "./colors";

.m-cover-screen() { height: 100%; width: 100%; }
.m-grad-background() {
  background-position:   0 0;
  background-repeat:     no-repeat;
  background-attachment: fixed;
  background-image: radial-gradient(
    150rem at 0 -15rem,
    @topic-bg-left,
    @topic-bg-right
  );
}

html {
  .m-cover-screen();
  .m-grad-background();
  font-size: 62.5%;
}
body { .m-cover-screen(); font-size: 1.6rem; }

//Generic
@import "./components/container";
@import "./components/panel";
@import "./components/modal";
@import "./components/avatar";

//Buttons
@import "./components/buttons/icon-button";

//Forms
@import "./components/forms/input";
@import "./components/forms/editor";
@import "./components/forms/submit";
@import "./components/forms/select";
@import  "./components/forms/text-type-ahead";
@import "./components/forms/editable-content";

//Text
@import "./components/text/h1";

//Forum specific
@import "./components/forum/category-list";
@import "./components/forum/category-list-item";
@import "./components/forum/table-control";
@import "./components/forum/table-control-button";
@import "./components/forum/topics-table";
@import "./components/forum/topics-table-header";
@import "./components/forum/topics-table-body";
@import "./components/forum/reaction-button";

//Topics specific
@import "./components/topic/create-topic-modal";
@import "./components/topic/topic-header";
@import "./components/topic/topic-body";
@import "./components/topic/topic-reply-editor";
@import "./components/topic/topic-reply-list-header";
@import "./components/topic/topic-reply-list";
@import "./components/topic/topic-reply-list-item";
@import "./components/topic/comment-editor";
@import "./components/topic/feed-item";

@import "./components/search/topics-search";

